tests/expectations/compiler/bugs/b28610.out
Error [ETYC0372126]: records cannot be instantiated in an async function context.
    --> compiler-test:12:20
     |
  12 |     let t: Token = Token { owner: addr };
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372126]: records cannot be instantiated in an async function context.
    --> compiler-test:13:12
     |
  13 |     assert(Token { owner: addr }.owner == addr);
     |            ^^^^^^^^^^^^^^^^^^^^^
